<resources>
    <string name="app_name">Rugby Score Keeper</string>
    <string name="reset">RESET</string>
    <string name="away_team">Away Team</string>
    <string name="home_team">Home Team</string>
    <string name="rugby_score_keeper_logo_of_person_catching_rugby_ball">Rugby score keeper logo of person catching rugby ball</string>
    <string name="conversion">CONVERSION</string>
    <string name="drop_goal">DROP GOAL</string>
    <string name="penalty_kick">PENALTY KICK</string>
    <string name="_0">0</string>
    <string name="ty">TRY</string>
</resources>
